<resources>
    <string name="app_name">AppClubTenis</string>
    <string name="url_del_servidor">URL del servidor</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="guardar_configuraci_n">Guardar configuración</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="configuraci_n">Configuración</string>
    <string name="descripci_n">Descripción</string>
    <string name="nombre_torneo">Nombre torneo</string>
    <string name="fecha_fin">Fecha fin:</string>
    <string name="fecha_inicio">Fecha inicio:</string>
    <string name="id_torneo">ID Torneo:</string>
    <string name="id_jugador">ID Jugador:</string>
    <string name="id_inscripci_n">ID Inscripción:</string>
    <string name="jugadores">Jugadores</string>
    <string name="torneos">Torneos</string>
    <string name="inscripciones">Inscripciones</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="idioma">Idioma</string>
    <string name="tema">Tema</string>
    <string name="nombre">Nombre</string>
    <string name="player_image">imagen</string>
    <string name="welcome">"Bienvenido, "</string>
    <string name="credenciales_incorrectas">Credenciales incorrectas</string>
    <string name="language_spanish">Español</string>
    <string name="language_galician">Gallego</string>
    <string name="tienes_que_guardar_una_configuracion_primero">Tienes que guardar una configuracion primero</string>
    <string name="password_encrypted_message">Contraseña cifrada</string>
    <string name="password_empty_message">Contraseña vacía, se guardará como tal</string>
    <string name="error_al_encriptar_el_nombre_de_la_imagen">Error al encriptar el nombre de la imagen</string>
    <string name="la_url_no_puede_estar_vac_a">La URL no puede estar vacía</string>
    <string name="configuraci_n_guardada">Configuración guardada</string>
    <string name="error_al_cargar_la_contrase_a">Error al cargar la contraseña</string>
    <string name="no_hay_configuraciones_guardadas">No hay configuraciones guardadas</string>
    <string name="no_se_pudo_obtener_la_lista">No se pudo obtener la lista</string>
    <string name="error_de_conexi_n">Error de conexión</string>
    <string name="introduce_nombre_y_contrase_a">Introduce nombre y contraseña</string>
    <string name="bienvenido_admin">Bienvenido Admin</string>
    <string name="bienvenido">"Bienvenido "</string>
    <string name="no_hay_configuraci_n_guardada">No hay configuración guardada</string>
    <string name="no_se_pudo_obtener_tu_informaci_n">No se pudo obtener tu información</string>
</resources>
