<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Activitys.MainActivity">

    <!-- Fila con texto y imagen -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"/>


        <ImageView
            android:id="@+id/imageViewPlayer"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:padding="2dp"
            android:scaleType="centerCrop"
            android:visibility="visible" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <Button
        android:id="@+id/btnPlayers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jugadores" />

    <Button
        android:id="@+id/btnTournaments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/torneos" />

    <Button
        android:id="@+id/btnInscriptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inscripciones" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configuraci_n" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesi_n" />

</LinearLayout>
