<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="12dp">


    <ImageView
        android:id="@+id/imagePlayer"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/player_image"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textPlayerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textPlayerUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>